start of branch

--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -6,8 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Dependencies\n",
+    "import os\n",
+    "from sqlalchemy import create_engine, inspect\n",
     "import pandas as pd\n",
-    "import os"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# Import password from config file\n",
+    "from config import password"
    ]
   },
   {
