--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -22,8 +22,199 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no</th>\n",
+       "      <th>player</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>exp</th>\n",
+       "      <th>college</th>\n",
+       "      <th>year</th>\n",
+       "      <th>team</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Brent Barry</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>185</td>\n",
+       "      <td>31-Dec-71</td>\n",
+       "      <td>us</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Oregon State</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Bruce Bowen</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>185</td>\n",
+       "      <td>14-Jun-71</td>\n",
+       "      <td>us</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Cal State Fullerton</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Devin Brown</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>220</td>\n",
+       "      <td>30-Dec-78</td>\n",
+       "      <td>us</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Texas-San Antonio</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Tim Duncan</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>250</td>\n",
+       "      <td>25-Apr-76</td>\n",
+       "      <td>vi</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Wake Forest</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Manu Ginóbili</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>205</td>\n",
+       "      <td>28-Jul-77</td>\n",
+       "      <td>ar</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iman Shumpert</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>215</td>\n",
+       "      <td>26-Jun-90</td>\n",
+       "      <td>us</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Georgia Tech</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>5</td>\n",
+       "      <td>J.R. Smith</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>225</td>\n",
+       "      <td>9-Sep-85</td>\n",
+       "      <td>us</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Tristan Thompson</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>254</td>\n",
+       "      <td>13-Mar-91</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Anderson Varejão</td>\n",
+       "      <td>C</td>\n",
+       "      <td>273</td>\n",
+       "      <td>28-Sep-82</td>\n",
+       "      <td>br</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Dion Waiters</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>215</td>\n",
+       "      <td>10-Dec-91</td>\n",
+       "      <td>us</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Syracuse</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>370 rows × 11 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
        "     no            player pos   wt birth_date nationality exp  \\\n",
        "0    17       Brent Barry  SG  185  31-Dec-71          us   9   \n",
@@ -52,11 +243,11 @@
        "369             Syracuse  2015  CLE   lost  \n",
        "\n",
        "[370 rows x 11 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>no</th>\n      <th>player</th>\n      <th>pos</th>\n      <th>wt</th>\n      <th>birth_date</th>\n      <th>nationality</th>\n      <th>exp</th>\n      <th>college</th>\n      <th>year</th>\n      <th>team</th>\n      <th>result</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>17</td>\n      <td>Brent Barry</td>\n      <td>SG</td>\n      <td>185</td>\n      <td>31-Dec-71</td>\n      <td>us</td>\n      <td>9</td>\n      <td>Oregon State</td>\n      <td>2005</td>\n      <td>SAS</td>\n      <td>win</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>12</td>\n      <td>Bruce Bowen</td>\n      <td>SF</td>\n      <td>185</td>\n      <td>14-Jun-71</td>\n      <td>us</td>\n      <td>8</td>\n      <td>Cal State Fullerton</td>\n      <td>2005</td>\n      <td>SAS</td>\n      <td>win</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>23</td>\n      <td>Devin Brown</td>\n      <td>SG</td>\n      <td>220</td>\n      <td>30-Dec-78</td>\n      <td>us</td>\n      <td>2</td>\n      <td>Texas-San Antonio</td>\n      <td>2005</td>\n      <td>SAS</td>\n      <td>win</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>21</td>\n      <td>Tim Duncan</td>\n      <td>PF</td>\n      <td>250</td>\n      <td>25-Apr-76</td>\n      <td>vi</td>\n      <td>7</td>\n      <td>Wake Forest</td>\n      <td>2005</td>\n      <td>SAS</td>\n      <td>win</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20</td>\n      <td>Manu Ginóbili</td>\n      <td>SG</td>\n      <td>205</td>\n      <td>28-Jul-77</td>\n      <td>ar</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>2005</td>\n      <td>SAS</td>\n      <td>win</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>365</th>\n      <td>4</td>\n      <td>Iman Shumpert</td>\n      <td>SG</td>\n      <td>215</td>\n      <td>26-Jun-90</td>\n      <td>us</td>\n      <td>3</td>\n      <td>Georgia Tech</td>\n      <td>2015</td>\n      <td>CLE</td>\n      <td>lost</td>\n    </tr>\n    <tr>\n      <th>366</th>\n      <td>5</td>\n      <td>J.R. Smith</td>\n      <td>SG</td>\n      <td>225</td>\n      <td>9-Sep-85</td>\n      <td>us</td>\n      <td>10</td>\n      <td>NaN</td>\n      <td>2015</td>\n      <td>CLE</td>\n      <td>lost</td>\n    </tr>\n    <tr>\n      <th>367</th>\n      <td>13</td>\n      <td>Tristan Thompson</td>\n      <td>PF</td>\n      <td>254</td>\n      <td>13-Mar-91</td>\n      <td>ca</td>\n      <td>3</td>\n      <td>Texas</td>\n      <td>2015</td>\n      <td>CLE</td>\n      <td>lost</td>\n    </tr>\n    <tr>\n      <th>368</th>\n      <td>17</td>\n      <td>Anderson Varejão</td>\n      <td>C</td>\n      <td>273</td>\n      <td>28-Sep-82</td>\n      <td>br</td>\n      <td>10</td>\n      <td>NaN</td>\n      <td>2015</td>\n      <td>CLE</td>\n      <td>lost</td>\n    </tr>\n    <tr>\n      <th>369</th>\n      <td>3</td>\n      <td>Dion Waiters</td>\n      <td>SG</td>\n      <td>215</td>\n      <td>10-Dec-91</td>\n      <td>us</td>\n      <td>2</td>\n      <td>Syracuse</td>\n      <td>2015</td>\n      <td>CLE</td>\n      <td>lost</td>\n    </tr>\n  </tbody>\n</table>\n<p>370 rows × 11 columns</p>\n</div>"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -72,7 +263,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "no              int64\n",
@@ -89,8 +279,9 @@
        "dtype: object"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,9 +305,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "OperationalError",
      "evalue": "(psycopg2.OperationalError) FATAL:  database \"ETL_Project\" does not exist\n\n(Background on this error at: http://sqlalche.me/e/13/e3q8)",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
@@ -225,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
