--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine, func, inspect\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
     "\n",
     "# Import password from config file\n",
     "from config import password"
@@ -765,6 +766,15 @@
     "# Pandas df for finals rosters\n",
     "roster_reader = pd.read_sql('SELECT * FROM finals_roster', engine)\n",
     "roster_reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = automap_base()\n"
    ]
   },
   {
