--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -772,9 +772,167 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>finals_year</th>\n",
+       "      <th>team</th>\n",
+       "      <th>result</th>\n",
+       "      <th>draft_year</th>\n",
+       "      <th>pick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>win</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alonzo Mourning</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>win</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Robert Horry</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Robert Horry</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>win</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Doug Christie</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>Harrison Barnes</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>win</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273</th>\n",
+       "      <td>Festus Ezeli</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>win</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>Draymond Green</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>win</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>Justin Hamilton</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>Joe Harris</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>277 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               player  finals_year team result  draft_year  pick\n",
+       "0    Shaquille O'Neal         2006  MIA    win        1992     1\n",
+       "1     Alonzo Mourning         2006  MIA    win        1992     2\n",
+       "2        Robert Horry         2007  SAS    win        1992    11\n",
+       "3        Robert Horry         2005  SAS    win        1992    11\n",
+       "4       Doug Christie         2006  DAL   lost        1992    17\n",
+       "..                ...          ...  ...    ...         ...   ...\n",
+       "272   Harrison Barnes         2015  GSW    win        2012     7\n",
+       "273      Festus Ezeli         2015  GSW    win        2012    30\n",
+       "274    Draymond Green         2015  GSW    win        2012    35\n",
+       "275   Justin Hamilton         2014  MIA   lost        2012    45\n",
+       "276        Joe Harris         2015  CLE   lost        2014    33\n",
+       "\n",
+       "[277 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Base = automap_base()\n"
+    "# Grabbing all finals roster and draft year from 2005 to 2015\n",
+    "finals_draft = pd.read_sql(\"SELECT finals_roster.player, finals_roster.year as finals_year, finals_roster.team, finals_roster.result, draft.year as draft_year, draft.pick FROM draft JOIN finals_roster ON draft.player = finals_roster.player WHERE draft.year > 1990\", engine)\n",
+    "finals_draft"
    ]
   },
   {
