--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -327,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -772,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -940,7 +944,7 @@
        "[277 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -982,7 +986,7 @@
        "Name: pick, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,8 +1009,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1023,17 +1029,17 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x1be10248898>,\n",
-       "  <matplotlib.lines.Line2D at 0x1be10248c18>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x1be10248f98>,\n",
-       "  <matplotlib.lines.Line2D at 0x1be10258358>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x1be10248588>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x1be102586d8>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x1be10258a58>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a02b6b92e8>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a02b6b9668>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x1a02b6b99e8>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a02b6b9d68>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x1a02b71ef98>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x1a02b6c7128>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x1a02b6c74a8>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,10 +1058,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LeBron James</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>James Jones</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dwyane Wade</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mario Chalmers</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Derek Fisher</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mike Miller</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ray Allen</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kendrick Perkins</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tim Duncan</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tony Parker</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shannon Brown</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chris Bosh</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Matt Bonner</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Norris Cole</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Luke Walton</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shane Battier</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eddie House</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jordan Farmar</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andrew Bynum</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Juwan Howard</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  player\n",
+       "LeBron James           6\n",
+       "James Jones            5\n",
+       "Dwyane Wade            5\n",
+       "Mario Chalmers         4\n",
+       "Derek Fisher           4\n",
+       "Mike Miller            4\n",
+       "Ray Allen              4\n",
+       "Kendrick Perkins       4\n",
+       "Tim Duncan             4\n",
+       "Tony Parker            4\n",
+       "Shannon Brown          4\n",
+       "Chris Bosh             4\n",
+       "Matt Bonner            3\n",
+       "Norris Cole            3\n",
+       "Luke Walton            3\n",
+       "Shane Battier          3\n",
+       "Eddie House            3\n",
+       "Jordan Farmar          3\n",
+       "Andrew Bynum           3\n",
+       "Juwan Howard           3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df = pd.DataFrame(finals_draft[\"player\"].value_counts())\n",
+    "final_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Udonis Haslem</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James Jones</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dwyane Wade</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chris Bosh</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Tony Massenburg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Antonio McDyess</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Horace Jenkins</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Jeff Ayres</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Damion James</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              player  count\n",
+       "0       LeBron James      6\n",
+       "1      Udonis Haslem      5\n",
+       "2        James Jones      5\n",
+       "3        Dwyane Wade      5\n",
+       "4         Chris Bosh      4\n",
+       "..               ...    ...\n",
+       "239  Tony Massenburg      1\n",
+       "240  Antonio McDyess      1\n",
+       "241   Horace Jenkins      1\n",
+       "242       Jeff Ayres      1\n",
+       "243     Damion James      1\n",
+       "\n",
+       "[244 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql(\"SELECT finals_roster.player, COUNT(*) FROM finals_roster GROUP BY finals_roster.player ORDER BY (count (player)) desc \", engine)"
+   ]
   },
   {
    "cell_type": "code",
