--- a/roster_reader.ipynb
+++ b/roster_reader.ipynb
@@ -957,10 +957,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -986,7 +984,7 @@
        "Name: pick, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,6 +1000,7 @@
     "plt.ylabel(\"Average Draft Ranking\",fontsize = 14)\n",
     "plt.title(\"Average draft ranking by position\",fontsize = 20)\n",
     "plt.xticks(rotation = 0)\n",
+    "plt.savefig(\"Resources/averagedraft.png\", bbox_inches = \"tight\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "pos_groupby"
@@ -1009,10 +1008,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1029,17 +1026,17 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a02b6b92e8>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a02b6b9668>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x1a02b6b99e8>,\n",
-       "  <matplotlib.lines.Line2D at 0x1a02b6b9d68>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x1a02b71ef98>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x1a02b6c7128>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x1a02b6c74a8>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x1a02d647f98>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a02d647358>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x1a02cf43b00>,\n",
+       "  <matplotlib.lines.Line2D at 0x1a02cf43b70>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x1a02d6192e8>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x1a02d63b1d0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x1a02d63b5c0>],\n",
        " 'means': []}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,13 +1049,14 @@
     "plt.title(\"Distribution of draft ranking\",fontsize = 20)\n",
     "plt.xticks(rotation = 0)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Resources/distributionrank.png\", bbox_inches = \"tight\")\n",
     "plt.show()\n",
     "box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1126,46 +1124,6 @@
        "      <th>Tony Parker</th>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shannon Brown</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chris Bosh</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Matt Bonner</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Norris Cole</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Luke Walton</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shane Battier</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Eddie House</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Jordan Farmar</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Andrew Bynum</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Juwan Howard</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1181,27 +1139,17 @@
        "Ray Allen              4\n",
        "Kendrick Perkins       4\n",
        "Tim Duncan             4\n",
-       "Tony Parker            4\n",
-       "Shannon Brown          4\n",
-       "Chris Bosh             4\n",
-       "Matt Bonner            3\n",
-       "Norris Cole            3\n",
-       "Luke Walton            3\n",
-       "Shane Battier          3\n",
-       "Eddie House            3\n",
-       "Jordan Farmar          3\n",
-       "Andrew Bynum           3\n",
-       "Juwan Howard           3"
+       "Tony Parker            4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_df = pd.DataFrame(finals_draft[\"player\"].value_counts())\n",
-    "final_df.head(20)"
+    "final_df.head(10)"
    ]
   },
   {
